--- a/simpleInterest.html
+++ b/simpleInterest.html
@@ -7,23 +7,20 @@
 </head>
 <body>
     <h2>Simple Interest Calculation</h2>
-    <p id="result"></p>
 
     <script>
         function calculateSimpleInterest(principal, tenure, rate) {
             return (principal * tenure * rate) / 100;
         }
+        let principal = 5000;
+        let tenure = 1;
+        let rate = 2.5;
 
-        // Inputs
-        var principal = 5000;
-        var tenure = 1;
-        var rate = 2.5;
-
-        // Calculate Simple Interest
+        // Calculating Simple Interest
         var simpleInterest = calculateSimpleInterest(principal, tenure, rate);
 
         // Display Result
-        alert("the simple interest of principal(5000),tenure(1),rate(2.5) is : "+simpleInterest)
+        alert("the simple interest of principal(5000), tenure(1), rate(2.5) is : "+simpleInterest)
     </script>
 </body>
 </html>
