--- a/simpleInterest.html
+++ b/simpleInterest.html
@@ -19,7 +19,7 @@
         // Calculating Simple Interest
         var simpleInterest = calculateSimpleInterest(principal, tenure, rate);
 
-        // Display Result
+        // Displaying the output using alert function of javascript
         alert("the simple interest of principal(5000), tenure(1), rate(2.5) is : "+simpleInterest)
     </script>
 </body>
